--- a/views/index.html
+++ b/views/index.html
@@ -3,6 +3,7 @@
     <title>Poster Viewer</title>
     <link rel="stylesheet" href="css/main.css">
     <link rel="stylesheet" href="css/default-skin/default-skin.css">
+    <script src="js/jquery/jquery-3.1.1.min.js"></script>
   </head>
   <body>
     <div class="pswp" tabindex="-1" role="dialog" aria-hidden="true">
