--- a/views/viewer.html
+++ b/views/viewer.html
@@ -1,9 +1,9 @@
 <html>
   <head>
     <title>Poster Viewer</title>
-    <link rel="stylesheet" href="../css/main.css">
-    <link rel="stylesheet" href="../css/default-skin/default-skin.css">
-    <script src="../js/jquery/jquery-3.1.1.min.js"></script>
+    <link rel="stylesheet" href="/css/main.css">
+    <link rel="stylesheet" href="/css/default-skin/default-skin.css">
+    <script src="/js/jquery/jquery-3.1.1.min.js"></script>
   </head>
   <body>
 
@@ -67,8 +67,8 @@
         </div>
       </div>
     </div>
-    <script src="../js/photoswipe.js"></script>
-    <script src="../js/photoswipe-ui-default.js"></script>
-    <script src="../js/main.js"></script>
+    <script src="/js/photoswipe.js"></script>
+    <script src="/js/photoswipe-ui-default.js"></script>
+    <script src="/js/main.js"></script>
   </body>
 </html>
