add tracking and remove x button

--- a/views/viewer.html
+++ b/views/viewer.html
@@ -1,5 +1,14 @@
 <html>
   <head>
+    <script async src="https://www.googletagmanager.com/gtag/js?id=UA-46779055-3"></script>
+    <script>
+      window.dataLayer = window.dataLayer || [];
+      function gtag(){dataLayer.push(arguments)};
+      gtag('js', new Date());
+
+      gtag('config', 'UA-46779055-3');
+    </script>
+
     <title>Poster Viewer</title>
     <link rel="stylesheet" href="/css/main.css">
     <link rel="stylesheet" href="/css/default-skin/default-skin.css">
@@ -8,6 +17,7 @@
   <body>
 
     <h1>Poster Viewer</h1>
+    No posters here, make sure the url is correct!
     <div id="galleries"></div>
 
     <div class="pswp" tabindex="-1" role="dialog" aria-hidden="true">
