fix mobile checking

--- a/views/error.html
+++ b/views/error.html
@@ -1,1 +1,10 @@
-Error not found
+<html>
+  <head>
+    <title>Poster Viewer</title>
+  </head>
+  <body>
+    <h1>Inappropriate Device</h1>
+    Please make sure to do this task on a mobile device!
+    <script src="/js/main.js"></script>
+  </body>
+</html>
