add error html, generate verification code

--- a/views/error.html
+++ b/views/error.html
@@ -1,10 +1,21 @@
 <html>
+  <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
   <head>
     <title>Poster Viewer</title>
+    <link rel="stylesheet" href="/css/error.css">
+    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.6.3/css/font-awesome.min.css">
   </head>
   <body>
-    <h1>Inappropriate Device</h1>
-    Please make sure to do this task on a mobile device!
+    <div class="container-fluid" id="body-container-fluid">
+				<div class="container">
+					<div class="jumbotron">
+            <br>
+						<h1 class="display-1"><i class="fa fa-spin fa-cog fa-3x"></i></h1>
+						<h1 class="display-3">Inappropriate Device</h1>
+						<h2 class="lower-case">Please make sure to do this task on a mobile device!</h2>
+          </div>
+				</div>
+			</div>
     <script src="/js/main.js"></script>
   </body>
 </html>
