add worker id enter logic

--- a/views/error.html
+++ b/views/error.html
@@ -11,8 +11,8 @@
 					<div class="jumbotron">
             <br>
 						<h1 class="display-1"><i class="fa fa-spin fa-cog fa-3x"></i></h1>
-						<h1 class="display-3">Inappropriate Device</h1>
-						<h2 class="lower-case">Please make sure to do this task on a mobile device!</h2>
+						<h1 class="display-3">Inappropriate Device or User</h1>
+						<h2 class="lower-case">If you have not done this task in the past, please do it on a mobile device!</h2>
           </div>
 				</div>
 			</div>
