add min time check

--- a/views/viewer.html
+++ b/views/viewer.html
@@ -67,9 +67,6 @@
                 <div class="pswp__share-tooltip"></div>
             </div>
 
-            <div id="submit-button">
-              <button class="pswp__button">Submit</button>
-            </div>
 
             <button class="pswp__button pswp__button--arrow--left" title="Previous (arrow left)">
             </button>
@@ -85,6 +82,17 @@
       </div>
     </div>
 
+    <div id="incomplete-task" class="row" style="display: none; text-align: center">
+      <p class="ui header">You've skimmed through all pictures but have not zoomed in carefully enough :(</p><br>
+    </div>
+
+    <div id="submit-page" class="row" style="display: none; text-align: center">
+      <p class="ui header">Congratulations! You can submit now. Feel free to zoom in more if you still have not gotten enough information from the pictures.</p><br>
+      <h1>QUESTIONS</h1>
+      <div id="submit-button">
+        <button>Submit</button>
+      </div>
+    </div>
 
     <div id="succesful-submit" class="row" style="display: none; text-align:center">
       <p class="ui header">Thank you for completing the task!</p>
