--- a/public/css/enterid.css
+++ b/public/css/enterid.css
@@ -4,7 +4,8 @@ body {
   background-repeat: no-repeat;
   background-position: center;
   background-size: cover;
-  line-height: 300%;
+  line-height: 200%;
+  height: 100vh;
 }
 
 .display-1 {
@@ -39,7 +40,7 @@ body {
 
 input[type="text"]{
   display: inline-block;
-  width: 500px;
+  width: 300px;
   height: 40px;
   box-sizing: border-box;
   outline: none;
