--- a/views/viewer.html
+++ b/views/viewer.html
@@ -83,11 +83,11 @@
     </div>
 
     <div id="incomplete-task" class="row" style="display: none; text-align: center">
-      <p class="ui header">You've skimmed through all pictures but have not zoomed in carefully enough :(</p><br>
+      <h2 class="ui header">You've skimmed through all pictures but have not zoomed in carefully enough :(</h2><br>
     </div>
 
     <div id="submit-page" class="row" style="display: none; text-align: center">
-      <p class="ui header">Congratulations! You can submit now. Feel free to zoom in more if you still have not gotten enough information from the pictures.</p><br>
+      <h2 class="ui header">Congratulations! You can submit now. </h2><br>
       <h1>QUESTIONS</h1>
       <div id="submit-button">
         <button>Submit</button>
