--- a/views/viewer.html
+++ b/views/viewer.html
@@ -12,7 +12,7 @@
     <title>Poster Viewer</title>
     <link rel="stylesheet" href="/css/main.css">
     <link rel="stylesheet" href="/css/default-skin/default-skin.css">
-    <script src="/js/jquery/jquery-3.1.1.min.js"></script>
+    <script src="//cdnjs.cloudflare.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
   </head>
   <body>
 
