Show Enter ID & Success Key pages on dtop

--- a/views/enterid.html
+++ b/views/enterid.html
@@ -19,8 +19,8 @@
           <div class="col-md-6 col-offset-2">
             <div class="text-input">
               <form onsubmit="return startTask()">
-                <input type="text" id="tag">
-                <label for="tag">ID #</label>
+                <input type="text" id="workerID">
+                <label for="workerID">ID #</label>
                 <input type="submit" value="Submit">
               </form>
             </div>
