--- a/views/viewer.html
+++ b/views/viewer.html
@@ -86,20 +86,13 @@
       <h2 class="ui header">You've skimmed through all pictures but have not zoomed in carefully enough :(</h2><br>
     </div>
 
-    <div id="submit-page" class="row" style="display: none; text-align: center">
-      <h2 class="ui header">Congratulations! You can submit now. </h2><br>
-      <h1>QUESTIONS</h1>
-      <div id="submit-button">
-        <button>Submit</button>
-      </div>
-    </div>
-
     <div id="succesful-submit" class="row" style="display: none; text-align:center">
       <p class="ui header">Thank you for completing the task!</p>
       <div style="background-color: lightgray; display: inline-block; align-items: center; padding: 20px; border-radius: 10px">
         <p>MTurk submit code:</p>
         <h1 class="ui header" id="submit-code"></h1>
       </div>
+      <p class="ui header">You can refresh the page on your desktop to copy the code from there.</p>
     </div>
     <script src="/js/photoswipe.js"></script>
     <script src="/js/photoswipe-ui-default.js"></script>
