On not zoomed enough, more obvious auto reload

--- a/views/viewer.html
+++ b/views/viewer.html
@@ -84,6 +84,7 @@
 
     <div id="incomplete-task" class="row" style="display: none; text-align: center">
       <h2 class="ui header">You've skimmed through all pictures but have not zoomed in carefully enough :(</h2><br>
+      <h2 class="ui header">The task will automatically restart momentarily.</h2><br>
     </div>
 
     <div id="succesful-submit" class="row" style="display: none; text-align:center">
