--- a/views/error.html
+++ b/views/error.html
@@ -12,12 +12,11 @@
 				<div class="container">
 					<div class="jumbotron">
             <br>
-						<h1><i class="fa fa-spin fa-cog fa-3x"></i></h1>
-						<h1>Inappropriate Device or User</h1>
-            <h2>If you have not done this task in the past, please do it on a mobile device!</h2>
-            <h2>Scan the QR code or copy the link below.</h2>
+            <h2>This task must be completed on a mobile device.</h2>
+            <h2>Please scan the QR code or copy the link below into your mobile browser.</h2>
             <div id="qrcode"></div>
             <h3 id="mobile-link"></div>
+            <h4>In this task, you will be presented with a photo gallery of <span id="num-photos"></span> images. Please inspect each image carefully, using the pinch zoom gesture on your mobile device to study image details. Please spend about 10-30 seconds per image looking around and zooming. You will not be allowed to submit the HIT unless you have done the task sufficiently thoroughly. The entire task should take you about <span id="task-time"></span> minutes and must be completed in one sitting.</h4>
           </div>
 				</div>
 			</div>
