Made progress numbers larger.

--- a/views/viewer.html
+++ b/views/viewer.html
@@ -15,10 +15,15 @@
     <script src="//cdnjs.cloudflare.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
   </head>
   <body>
+    <style>
+      .pswp__counter {
+        font-size: 24px;
+      }
+    </style>
 
     <div id="error-url">
       <h1>Poster Viewer</h1>
-      No posters here, make sure the url is correct!
+      <h2>No posters here, make sure the url is correct!</h2>
     </div>
     <div id="galleries"></div>
 
