--- a/views/error.html
+++ b/views/error.html
@@ -11,12 +11,12 @@
     <div class="container-fluid" id="body-container-fluid">
 				<div class="container">
 					<div class="jumbotron">
-            <br>
-            <h2>This task must be completed on a mobile device.</h2>
+            <h1>This task must be completed on a mobile device.</h1>
             <h2>Please scan the QR code or copy the link below into your mobile browser.</h2>
+            <h2>Leave this page open, and refresh it once you're done with the mobile component.</h2>
             <div id="qrcode"></div>
             <h3 id="mobile-link"></div>
-            <h4>In this task, you will be presented with a photo gallery of <span id="num-photos"></span> images. Please inspect each image carefully, using the pinch zoom gesture on your mobile device to study image details. Please spend about 10-30 seconds per image looking around and zooming. You will not be allowed to submit the HIT unless you have done the task sufficiently thoroughly. The entire task should take you about <span id="task-time"></span> minutes and must be completed in one sitting.</h4>
+            <h4>In this task, you will be presented with a photo gallery of <span id="num-photos"></span> images. Please inspect each image carefully, using the pinch zoom gesture on your mobile device to study image details. Please spend about 10-30 seconds per image looking around and zooming. Please swipe right after viewing each image to move to the next one. You will not be allowed to submit the HIT unless you have done the task sufficiently thoroughly. The entire task should take you about <span id="task-time"></span> minutes and must be completed in one sitting.</h4>
           </div>
 				</div>
 			</div>
