Using cdn for photoswipe

--- a/views/enterid.html
+++ b/views/enterid.html
@@ -1,11 +1,12 @@
 <html>
-<meta name="viewport" content="width=device-width, height=device-height, initial-scale=1, shrink-to-fit=no">
 <head>
   <title>Poster Viewer</title>
-  <link rel="stylesheet" href="/css/enterid.css">
+  <meta name="viewport" content="width=device-width">
   <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.6.3/css/font-awesome.min.css">
-  <script src="//cdnjs.cloudflare.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
-  <script src="//maxcdn.bootstrapcdn.com/bootstrap/4.1.1/js/bootstrap.min.js"></script>
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
+  <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.1.1/js/bootstrap.min.js"></script>
+  <link rel="stylesheet" href="/css/enterid.css">
+  <script src="/js/main.js"></script>
 </head>
 <body>
   <div class="container-fluid" id="body-container-fluid">
@@ -29,6 +30,5 @@
       </div>
     </div>
   </div>
-  <script src="/js/main.js"></script>
 </body>
 </html>
