--- a/views/enterid.html
+++ b/views/enterid.html
@@ -6,7 +6,7 @@
   <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
   <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.1.1/js/bootstrap.min.js"></script>
   <link rel="stylesheet" href="/css/enterid.css">
-  <script src="/js/main.js"></script>
+  <script src="/js/enterid.js"></script>
 </head>
 <body>
   <div class="container-fluid" id="body-container-fluid">
