--- a/views/error.html
+++ b/views/error.html
@@ -6,6 +6,7 @@
     <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery.qrcode/1.0/jquery.qrcode.min.js"></script>
     <link rel="stylesheet" href="/css/error.css">
+    <script src="/js/error.js"></script>
   </head>
   <body>
     <div class="container-fluid" id="body-container-fluid">
@@ -16,10 +17,9 @@
             <h2>Leave this page open, and refresh it once you're done with the mobile component.</h2>
             <div id="qrcode"></div>
             <h3 id="mobile-link"></div>
-            <h4>In this task, you will be presented with a photo gallery of <span id="num-photos"></span> images. Please inspect each image carefully, using the pinch zoom gesture on your mobile device to study image details. Please spend about 10-30 seconds per image looking around and zooming. Please swipe right after viewing each image to move to the next one. You will not be allowed to submit the HIT unless you have done the task sufficiently thoroughly. The entire task should take you about <span id="task-time"></span> minutes and must be completed in one sitting.</h4>
+            <h4>In this task, you will be presented with a photo gallery of 35 images. Please inspect each image carefully, using the pinch zoom gesture on your mobile device to study image details. Please spend about 10-30 seconds per image looking around and zooming. Please swipe right after viewing each image to move to the next one. You will not be allowed to submit the HIT unless you have done the task sufficiently thoroughly. The entire task should take you about 10 minutes and must be completed in one sitting.</h4>
           </div>
 				</div>
 			</div>
-    <script src="/js/main.js"></script>
   </body>
 </html>
