--- a/views/viewer.html
+++ b/views/viewer.html
@@ -7,6 +7,7 @@
     <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/photoswipe/4.1.2/photoswipe.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/photoswipe/4.1.2/photoswipe-ui-default.min.js"></script>
+    <script src="/js/shared.js"></script>
     <script src="/js/main.js"></script>
   </head>
   <body>
@@ -87,15 +88,6 @@
     <div id="incomplete-task" class="row" style="display: none; text-align: center">
       <h2 class="ui header">You've skimmed through all pictures but have not zoomed in carefully enough :(</h2><br>
       <h2 class="ui header">The task will automatically restart momentarily.</h2><br>
-    </div>
-
-    <div id="succesful-submit" class="row" style="display: none; text-align:center">
-      <p class="ui header">Thank you for completing the task!</p>
-      <div style="background-color: lightgray; display: inline-block; align-items: center; padding: 20px; border-radius: 10px">
-        <p>MTurk submit code:</p>
-        <h1 class="ui header" id="submit-code"></h1>
-      </div>
-      <p class="ui header">You can refresh the page on your desktop to copy the code from there.</p>
     </div>
   </body>
 </html>
