--- a/views/viewer.html
+++ b/views/viewer.html
@@ -8,7 +8,7 @@
     <script src="https://cdnjs.cloudflare.com/ajax/libs/photoswipe/4.1.2/photoswipe.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/photoswipe/4.1.2/photoswipe-ui-default.min.js"></script>
     <script src="/js/shared.js"></script>
-    <script src="/js/main.js"></script>
+    <script src="/js/viewer.js"></script>
   </head>
   <body>
     <style>
