No survey on mobile. Reshuffle every time.

--- a/views/viewer.html
+++ b/views/viewer.html
@@ -89,5 +89,10 @@
       <h2 class="ui header">You've skimmed through all pictures but have not zoomed in carefully enough :(</h2><br>
       <h2 class="ui header">The task will automatically restart momentarily.</h2><br>
     </div>
+
+    <div id="done" class="row" style="display: none; text-align: center">
+      <h1 class="ui header">You are done!</h1><br>
+      <h2 class="ui header">Please refresh the page on your browser to complete a brief survey and get your completion key.</h2><br>
+    </div>
   </body>
 </html>
