Don't block mobile-only users

--- a/views/viewer.html
+++ b/views/viewer.html
@@ -93,6 +93,7 @@
     <div id="done" class="row" style="display: none; text-align: center">
       <h1 class="ui header">You are done!</h1><br>
       <h2 class="ui header">Please refresh the page on your browser to complete a brief survey and get your completion key.</h2><br>
+      <h3 class="ui header">Or, you can complete the survey on mobile by refreshing this page.</h3><br>
     </div>
   </body>
 </html>
