Clarify fail message, shorter estimates

--- a/views/viewer.html
+++ b/views/viewer.html
@@ -86,7 +86,7 @@
     </div>
 
     <div id="incomplete-task" class="row" style="display: none; text-align: center">
-      <h2 class="ui header">You've skimmed through all pictures but have not zoomed in carefully enough :(</h2><br>
+      <h2 class="ui header">You've skimmed through all the pictures. We ask you to pay more careful attention to each one. Please spend at least 5 seconds per image, looking and zooming around.</h2><br>
       <h2 class="ui header">The task will automatically restart momentarily.</h2><br>
     </div>
 
