--- a/views/viewer.html
+++ b/views/viewer.html
@@ -4,10 +4,10 @@
     <meta name="viewport" content="width=device-width">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/photoswipe/4.1.2/photoswipe.min.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/photoswipe/4.1.2/default-skin/default-skin.min.css">
+    <script src="https://cdn.jsdelivr.net/npm/url-search-params-polyfill@5.0.0/index.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
     <script src="/js/photoswipe.js"></script> <!-- we added an event for logging -->
     <script src="https://cdnjs.cloudflare.com/ajax/libs/photoswipe/4.1.2/photoswipe-ui-default.min.js"></script>
-    <script src="/js/shared.js"></script>
     <script src="/js/viewer.js"></script>
   </head>
   <body>
