--- a/views/survey.html
+++ b/views/survey.html
@@ -3,10 +3,10 @@
 <head>
   <title>Poster Viewer</title>
   <meta name="viewport" content="width=device-width">
+  <script src="https://cdn.jsdelivr.net/npm/url-search-params-polyfill@5.0.0/index.min.js"></script>
   <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
   <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/semantic-ui@2.4.2/dist/semantic.min.css">
   <script src="https://cdn.jsdelivr.net/npm/semantic-ui@2.4.2/dist/semantic.min.js"></script>
-  <script src="/js/shared.js"></script>
   <script src="/js/survey.js"></script>
 </head>
 
