Random sampling is consistent; extra questions.

--- a/views/done.html
+++ b/views/done.html
@@ -4,8 +4,8 @@
   <title>Poster Viewer</title>
   <meta name="viewport" content="width=device-width">
   <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/semantic-ui@2.4.2/dist/semantic.min.css">
+  <script src="https://cdn.jsdelivr.net/npm/url-search-params-polyfill@5.0.0/index.min.js"></script>
   <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
-  <script src="/js/shared.js"></script>
   <script src="/js/done.js"></script>
 </head>
 
