--- a/views/survey.html
+++ b/views/survey.html
@@ -14,11 +14,21 @@
   <div id="demo-survey" class="ui top aligned centered grid">
     <div class="row">
       <div class="left aligned fourteen wide column">
-        <h2>Demographic Survey</h2>
+        <h2>Almost Done!</h2>
         <p>Please take a moment to fill out this survey.<br />
         You can refresh the page on your desktop to fill out the survey from there.</p>
         <form class="ui form" id="survey-form">
 
+          <div class="field">
+            <label>Zoom</label>
+            <div>How did you use zoom to explore the images? What image regions did you find you zoomed into?</div>
+            <textarea name="zoom" rows="2"></textarea>
+          </div>
+
+          <div id="extra-questions" class="grouped fields">
+            <label>Images</label>
+          </div>
+  
           <div class="inline fields">
             <label>Gender</label>
             <div class="field">
