--- a/src/index.scss
+++ b/src/index.scss
@@ -1,7 +1,33 @@
+// why isn't this default?
 *, *::before, *::after {
   box-sizing: border-box;
 }
 
+// this makes more semantic sense to me
 body {
   margin: 0;
+  padding: 16px;
+}
+
+// why isn't this default?
+input[type="radio"],
+input[type="checkbox"],
+input[type="submit"],
+input[type="button"],
+button {
+  cursor: pointer;
+}
+
+// fixes invisible input issue on some mobile devices
+// add other text input types as needed
+input[type="text"],
+input[type="password"],
+input:not([type]), // default is text
+textarea {
+  box-shadow: .25px .25px 1px 1px darkgray;
+}
+
+// range sliders seem to need this
+input[type="range"] {
+  display: inline-block;
 }
