--- a/src/viewer/viewer.scss
+++ b/src/viewer/viewer.scss
@@ -19,6 +19,10 @@
       content: '\A';
       white-space: pre;
     }
+    &.done {
+      text-decoration: line-through;
+      background: lightgreen;
+    }
   }
 }
 
